# vctrs

./: .Rbuildignore  .clang-format  .git-blame-ignore-revs  .gitignore  .travis.yml  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  LICENSE.mpl  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  _temporary.R  air.toml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  revdep  search.json  sitemap.xml
R/: $.R  RcppExports.R  aaa.R  altrep-lazy-character.R  altrep-rep.R  altrep-rle.R  altrep.R  arith.R  arithmetic.R  assert.R  bind.R  bit64.R  c.R  case-when.R  cast-list.R  cast.R  cnd.R  coerce.R  compact.R  compare.R  compat-lifecycle.R  compat-purrr.R  complete.R  conditions.R  data.R  deduplicate.R  deduplicated.R  dictionary.R  dim.R  empty.R  encoding.R  equal.R  expand.R  faq-developer.R  faq-internal.R  faq.R  fields.R  fill.R  flatten.R  group.R  (+97 more)
articles/: index.html  index.md  pillar.html  pillar.md  s3-vector.html  s3-vector.md  stability.html  stability.md  type-size.html  type-size.md
bench/: dictionary.Rmd  dictionary.md  order.Rmd  order.md  rbind.Rmd  rbind.md  sorting-vs-hashing.Rmd  sorting-vs-hashing.md  unique.Rmd  unique.md
dev/: CODE_OF_CONDUCT.html  LICENSE-text.html  LICENSE-text.md  LICENSE.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
man/: as-is.Rd  data_frame.Rd  df-complete.Rd  df_detect_complete.Rd  df_list.Rd  df_ptype2.Rd  dim.Rd  (+167 more)
(+1183 files in other folders)
